# radicalbit-ai-monitoring-installer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: release-config.json
.github/workflows/: build-package.yaml  release.yaml
radicalbit_ai_monitoring/: __init__.py  cli.py
radicalbit_ai_monitoring/commands/: info.py
radicalbit_ai_monitoring/commands/platform/: install.py  platform.py  stop.py  uninstall.py  up.py
radicalbit_ai_monitoring/models/: compose_service.py  docker_status.py
radicalbit_ai_monitoring/resources/: docker-compose-local.yaml
radicalbit_ai_monitoring/resources/docker/init-data/: init_db.sql
radicalbit_ai_monitoring/services/: docker.py  fs.py
tests/services/: fs_test.py
